# hops

./: .gitignore  Makefile.am  README  avl.c  configure.ac
cython/: avl.pxd  avl.pyx  setup.py
lib/: README
lib/hops/: __init__.py
m4/: cython.m4
src/: Makefile.am  avl.c  avl.h
src/c/: Makefile.am  common.h
src/c/array/: Makefile.am  array.c  array.h
src/c/avl/: Makefile.am  avl.c  avl.h
src/c/ht/: Makefile.am  ht.c  ht.h
src/cython/: Makefile.am  array.pxd  array.pyx  avl.c  avl.pxd  avl.pyx  ht.pxd  ht.pyx  setup.py
test/: Makefile.am  test.py  test_array.py  test_avl.py  test_ht.py
